# GEMINI

./: .gitignore  ARCHITECTURE.md  CORVUS_Intent_Design.md  CORVUS_Intents.md  PIPER_UNITY6_CONTRIBUTION.md  README.md  Untitled-1.txt  UpgradeLog.htm  ai_model.py  analyze_balance.py  chat.py  check_data_integrity.py  check_doubles.py  check_prompt_parts.py  claude.md  config.py  crf.py  data.json  decoding.py  evalairesponse.py  extraval.json  extraval.py  extraval_data.json  failures.txt  find_empty_tokens.py  find_mismatches.py  finetune.py  functiongemmachat.py  info.py  inspect_model.py  integrity_log.txt  lastrun.txt  notes.txt  output.txt  plan.md  predictive_warning_system.py  prompts.json  pyproject.toml  requirements.txt  server.py  (+13 more)
.claude/: settings.local.json
Assets/: CanvasMouseButtonManager.cs  DefaultNetworkPrefabs.asset  DictationHandler.cs  EV2IconColor.cs  List menu.prefab  MenuState.cs  MouseButtonManager.cs  NavigationController.cs  PRIconSet.cs  PermissionRequester.cs  Readme.asset  ScreenManager.cs  StateVisaulizerHelper.cs  packages.config
Assets/CLAWS/: AURASpatialMouse.cs  AURA_1.unity  CanvasBackplateQuad.mat  GEMINI.unity  GEMINI2.unity  Navigation.prefab  PathfindingManager.prefab  (+2 more)
ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
SimpleNeuralNetwork/: .gitignore  README.md  requirements.txt
augment_commands/: generate_data.py
data/: names.json  names.txt
scripts/: build_faiss_index.py  train_intent_nn.ipynb
src/: config.py
tests/: test_ai_model.py  test_classifier.py  test_nn.py
(+1628 files in other folders)
