[project]
name = "corvus-pythonserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "onnxruntime>=1.23.2",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
    "pytest>=8.0.0",
    "sentence-transformers>=5.2.3",
    "datasets>=4.6.1",
    "setfit>=1.1.3",
]

[project.scripts]
corvus     = "src.server.main:main"
model-test = "src.classifier.test_classifier:main"

[build-system]                                                                                    
  requires = ["setuptools>=75.0"]
  build-backend = "setuptools.build_meta"

  [tool.setuptools.packages.find]
  include = ["src", "src.*"]
